Deployments/ingress.yaml
apiVersion : networking.k8s.io/v1
kind: Ingress
metadata:
  name: movieapp
spec:
  rules:
  - host: www.movieapp.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: movie-service
            port:
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: movie-webservice
            port:
              number: 80
